# colonel

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
configs/: grub.cfg
src/kernel/: globals.h  kernel.c  ports.h  system.h  tty.h
src/kernel/arch/x86/: boot.s  gdt.c  gdt.h  gdt.s  linker.ld  paging.c  structs.h  tss.h  tty.c  vga.h
toolchains/: i686-elf.cmake
